# test-pckage

./: .isort.cfg  pyproject.toml  test.py
first_package/: test.py
test_pckage.egg-info/: PKG-INFO  SOURCES.txt
